--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -78,7 +78,7 @@ footer {
 footer a {
     background-color: #E7ECEF;
     color: #274C77;
-    text-decoration: none
+    text-decoration: none;
 }
 
 footer a:hover {
