--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,6 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@300&family=Moon+Dance&display=swap');
-/*font-family: Barlow, Helvetica, sans-serif;
- font-family: "Moon Dance", Tahoma, sans-serif;*/
 
 #content {
     max-width: 1600px;
@@ -18,6 +16,13 @@ body {
 
 header {
     background-color:#A3CEF1;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 
 nav a {
@@ -36,8 +41,43 @@ nav a:hover {
     text-align: center;
 }
 
+#hero-msg h1{
+    color:#E7ECEF
+}
+
+#hero-msg h4{
+    color:#a3cef1
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
+#hero-img {
+    width: 100%;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
 .button-box {
     text-align: center;
+}
+
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10,1fr);
 }
 
 main section {
@@ -80,17 +120,48 @@ h4 {
 
 .card-img {
     border: 10px solid #274C77;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #21303b;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #21303b;
 }
 
 .rivers-card, .camping-card, .rapids-card {
     margin: 200px 0;
 }
 
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
 
 #background {
     height: 725px;
     background-color:#8B8C89;
     margin-bottom: 200px;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 .msg {
@@ -98,6 +169,9 @@ h4 {
     line-height: 1.5em;
     padding: 35px;
     margin-top: 200px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #21303b;
 }
 
 .msg h2{
@@ -116,6 +190,9 @@ footer {
     color:#274C77;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer a {
@@ -144,6 +221,8 @@ footer .social img {
 
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 .logo{
@@ -155,6 +234,46 @@ footer .social img {
     padding-top: 10px;
 }
 
-#hero-img {
-    width: 100%;
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
+            
