--- a/tw/styles/site-plan.css
+++ b/tw/styles/site-plan.css
@@ -1,28 +1,30 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500&family=Unbounded:wght@500&display=swap');
+
 
 :root {
-  /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  /* change the values below to your colors from your palette 
+  https://coolors.co/e63946-f1faee-a8dadc-457b9d-1d3557*/
+  --primary-color: #457B9D   ;
+  --secondary-color: #A8DADC ;
+  --accent1-color: #e63946;
+  --accent2-color: #f1faee;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "Unbounded";
+  --paragraph-font: "Noto Sans", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
+  --headline-color-on-white: #1D3557;  /* headlines on a white background */ 
+  --headline-color-on-color: #457B9D; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #457B9D; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #457B9D; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #f1faee;
   --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
+  --nav-background-color: #A8DADC;
+  --nav-hover-link-color: #F1FAEE;
   --nav-hover-background-color: #396E94;
 }
 
