--- a/tw/styles/food-style.css
+++ b/tw/styles/food-style.css
@@ -34,29 +34,30 @@ nav a:hover {
     margin-right:20px;
     border-radius: 5px;
 }
-#welcome{
-    padding: 0px 50px;
+#food{
+    margin:5px;
+    padding: 0px 100px;
     display: grid;
-    grid-template-columns: repeat(12,1fr);
+    grid-template-columns: repeat(11,1fr);
+    grid-template-rows: 70px 1fr;
+    gap:20px;
 }
-#wlecome-box{
-    grid-column: 1/13;
-    grid-row: 1/1;
-    z-index: -1;
+.food-title{
+    grid-row: 1/2;
+    grid-column: 2/3;
 }
-#welcome-img{
-    width: 100%;
-    opacity: .9
+#night-market-img{
+    margin-top: -15px;
+    max-width: 100%;
+    grid-column:2/6;
+    border: 3px solid #e63946;
 }
-#welcome-msg{
-    grid-column: 6/11;
-    grid-row: 1/1;
-}
-.welcome-title {
-    color:#e63946;
-    font-family: "Unbounded", Tahoma, sans-serif;
-    font-size: 1.9em;
-    text-shadow: 3px 3px #000000
+.night-msg{
+    font-size: .8em;
+    grid-column: 6/9;
+    grid-row:2/3;
+    justify-content: space-between;
+    align-self: end;
 }
 #logo_link {
     padding-top: 5px;
@@ -102,55 +103,38 @@ footer .social img {
 main{
     padding: 0px 75px;
 }
-h2{
+h1{
+    color:#1D3557;
+    display: inline-block;
+    background-color:#A8DADC;
+    font-family: "Unbounded", Tahoma, sans-serif;
+    padding: 5px 5px 15px 5px;
+    border-radius: 10px;
+    margin:7px;
+}
+h3{
     color:#1D3557;
     display: inline-block;
     background-color:#A8DADC;
     font-family: "Unbounded", Tahoma, sans-serif;
     padding: 5px 5px 5px 5px;
     border-radius: 10px;
-    margin:0;
+    margin:7px;
 }
-#main-content{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-auto-flow: row;
-    gap: 15px;
+.card-img {
+    border: 5px solid #e63946;
+    max-width:100%;
+    height: auto;
 }
-.map{
-    grid-column: 1/2;
-    grid-row: 1/2;
-    margin-top: 5px;
-}
-.cks{
-    grid-column: 2/3;
-    grid-row: 2/3;
-}
-.tpe{
-    grid-column: 1/3;
-    grid-row: 3/4;
-    margin:0px -25px;
-}
-.img{
-    width: 100%;
-    box-shadow: 10px 10px 10px #21303b;
-}
-#img-tpe{
-    width: 100%;
-}
-#msg-1{
-    padding-top: 20px;
-    padding-left: 30px;
-    grid-column: 2/3;
-    grid-row: 1/2;
-    color:#457B9D;
-}
-#msg-2{
-    padding-top: 25px;
-    padding-right: 30px;
-    grid-column: 1/2;
-    grid-row: 2/3;
-    color:#457B9D;
+.food-grid{
+    display:grid;
+    padding: 2rem;
+    grid-template-columns:400px 1fr;
+    gap: 1rem;
+    align-items:end;
+    max-width: 800px;
+    margin: 0 auto;
+    font-size: .8em;
 }
 
 @media screen and (max-width: 900px) {
