--- a/tw/styles/culture-style.css
+++ b/tw/styles/culture-style.css
@@ -9,6 +9,7 @@ body {
     font-size: 20px;
     margin: 0;
     padding: 0;
+    color:#457B9D
 }
 header{
     display: grid;
@@ -34,29 +35,13 @@ nav a:hover {
     margin-right:20px;
     border-radius: 5px;
 }
-#welcome{
-    padding: 0px 50px;
-    display: grid;
-    grid-template-columns: repeat(12,1fr);
-}
-#wlecome-box{
-    grid-column: 1/13;
-    grid-row: 1/1;
-    z-index: -1;
-}
-#welcome-img{
-    width: 100%;
-    opacity: .9
-}
-#welcome-msg{
-    grid-column: 6/11;
-    grid-row: 1/1;
-}
-.welcome-title {
-    color:#e63946;
+h1{
+    color:#1D3557;
+    display: inline-block;
+    background-color:#A8DADC;
     font-family: "Unbounded", Tahoma, sans-serif;
-    font-size: 1.9em;
-    text-shadow: 3px 3px #000000
+    padding: 5px 5px 10px 5px;
+    border-radius: 10px;
 }
 #logo_link {
     padding-top: 5px;
@@ -70,7 +55,7 @@ footer {
     background-color:#A8DADC;
     color:#1D3557;
     padding: 20px 30px;
-    margin-top: 20px;
+    margin-top: 40px;
     display: grid;
     grid-template-columns: repeat(14,1fr);
     justify-content: space-around;
@@ -100,97 +85,21 @@ footer .social img {
     padding-top: 10px;
 }
 main{
-    padding: 0px 75px;
+    padding: 0px 110px;
 }
-h2{
-    color:#1D3557;
-    display: inline-block;
-    background-color:#A8DADC;
-    font-family: "Unbounded", Tahoma, sans-serif;
-    padding: 5px 5px 5px 5px;
-    border-radius: 10px;
-    margin:0;
-}
-#main-content{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-auto-flow: row;
-    gap: 15px;
-}
-.map{
-    grid-column: 1/2;
-    grid-row: 1/2;
-    margin-top: 5px;
-}
-.cks{
-    grid-column: 2/3;
-    grid-row: 2/3;
-}
-.tpe{
-    grid-column: 1/3;
-    grid-row: 3/4;
-    margin:0px -25px;
-}
-.img{
-    width: 100%;
-    box-shadow: 10px 10px 10px #21303b;
-}
-#img-tpe{
-    width: 100%;
-}
-#msg-1{
-    padding-top: 20px;
-    padding-left: 30px;
-    grid-column: 2/3;
-    grid-row: 1/2;
+#msg{
     color:#457B9D;
+    font-size: .9em;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
-#msg-2{
-    padding-top: 25px;
-    padding-right: 30px;
-    grid-column: 1/2;
-    grid-row: 2/3;
-    color:#457B9D;
+#img-container{
+    display: flex;
+    align-items: center;
 }
-
-@media screen and (max-width: 900px) {
-    #hero, .home-grid {
-        display: block;
-        height: auto;
-    }
-    nav, footer {
-        flex-direction: column;
-    }
-    nav a {
-        display: block;
-        padding: 15px;
-    }
-    #hero {
-        margin-top: 0;
-    }
-    #hero-msg {
-        margin-top: 0;
-    }
-    #hero-msg h4 {
-        display: none;
-    }
-    .home-title {
-        font-size: 25px;
-        color: #6f7364;
-    }
-    .rivers-card, .camping-card, .rapids-card { 
-        margin: 50px auto;
-        width: 60%;
-    }
-    #background {
-        display: none;
-    }
-    .mountains, .msg {
-        width: 80%;
-        display: block;
-        margin: 0 auto;
-    }
-    footer {
-        margin-top: 25px;
-    }
+#img-container img{
+    margin-right: 20px;
+    width: 100%;
+    height:350px;
+    border: 3px solid #e63947c5;
 }
