--- a/tw/styles/culture-style.css
+++ b/tw/styles/culture-style.css
@@ -93,11 +93,11 @@ main{
     margin-top: 25px;
     margin-bottom: 25px;
 }
-#img-container{
+.img-container{
     display: flex;
     align-items: center;
 }
-#img-container img{
+.img-container img{
     margin-right: 20px;
     width: 100%;
     height:350px;
